--- a/package.json
+++ b/package.json
@@ -28,15 +28,16 @@
   },
   "homepage": "https://github.com/jesseokeya/Forbes400#readme",
   "dependencies": {
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "morgan": "^1.9.0",
-    "request": "^2.83.0",
+    "request": "^2.87.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "sort-array": "^2.0.0"
   },
   "devDependencies": {
-    "mocha": "^4.1.0",
-    "supertest": "^3.0.0"
+    "react-scripts": "^1.1.4"
   }
 }
