--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "custom-logger": "^0.3.1",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
     "request": "^2.87.0",
